jv-kube-config.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jv

---
kind: Service
apiVersion: v1
metadata:
  name: jv-service
  namespace: jv
spec:
  selector:
    app: jv
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /jv
        backend:
          serviceName: test
          servicePort: 80

---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: jv-deployment
  namespace: jv
  labels:
    app: jv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jv
  template:
    metadata:
      labels:
        app: jv
    spec:
      serviceAccountName: jv-service-user
      containers:
      - name: jv-server
        image: "net.cockamamy.jv/jv-server"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "768Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - name: api-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: api-port
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: api-port
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
